--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -23,4 +23,4 @@ jobs:
           pip install pytest tox
         
       - name : pytest_run
-        run : pytest src/tests
+        run : pytest src/tests -v
